fixed overflow issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 a {
@@ -13,7 +14,7 @@ a {
 .main-container {
   background-image: url("/background.png");
   width: 100vw;
-  height: 100vh;
+  height: 100vh ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
